# ardea-sila2

./: .gitignore  .gitmodules  LICENSE  README.md  config.example.toml  motion.example.toml  pyproject.toml
ardea_sila2/: __main__.py  config.py  motion_config.py  server.py
ardea_sila2/feature_implementations/: __init__.py  carriageservice_impl.py  labwareservice_impl.py  robotorientationservice_impl.py  robotposeservice_impl.py
feature_definitions/: CarriageService.sila.xml  LabwareService.sila.xml  RobotOrientationService.sila.xml  RobotPoseService.sila.xml
